--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,9 +115,9 @@ hwi_oauth:
         username_iterations: 30
         properties:
             # these properties will be used/redefined later in the custom FOSUBUserProvider service.
-            #facebook: facebook_id
+            facebook: facebook_id
             vkontakte: vkontakte_id
-            #mailru: mailru_id
+            google: google_id
     resource_owners:
         facebook:
             type:                facebook
@@ -132,11 +132,10 @@ hwi_oauth:
             client_id:           "%vkontakte_app_id%"
             client_secret:       "%vkontakte_app_secret%"
         google:
-            type:                odnoklassniki
-            client_id:           "%odnoklassniki_app_id%"
-            client_secret:       "%odnoklassniki_app_secret%"
-            options:
-                application_key: "%odnoklassniki_app_key%"
+            type:                google
+            client_id:           "%google_client_id%"
+            client_secret:       "%google_client_secret%"
+            scope:               "email profile"
     # here you will add one (or more) configurations for resource owners
 
 # Swiftmailer Configuration
