--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -15,4 +15,4 @@ services:
     app_provider:
         class: AppBundle\Security\Core\User\FOSUBUserProvider
         #this is the place where the properties are passed to the UserProvider - see config.yml
-        arguments: [@fos_user.user_manager,{facebook: facebook_id, vkontakte: vkontakte_id, odnoklassniki: odnoklassniki_id},@session]
+        arguments: [@fos_user.user_manager,{facebook: facebook_id, vkontakte: vkontakte_id, google: google_id},@session]
