--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -21,6 +21,5 @@ parameters:
     facebook_app_secret: ~
     vkontakte_app_id: ~
     vkontakte_app_secret: ~
-    odnoklassniki_app_id: ~
-    odnoklassniki_app_secret: ~
-    odnoklassniki_app_key: ~
+    google_client_id: ~
+    google_client_secret: ~
