--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -6,6 +6,8 @@ framework:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
         strict_requirements: true
     profiler: { only_exceptions: false }
+    session:
+        cookie_domain: .sym.local
 
 web_profiler:
     toolbar: true
