В дев режиме отправка email на почту разработчика

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -43,5 +43,5 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    delivery_address: ivanov@web-premier.ru
