Переход на файл в IDE

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,6 +11,7 @@ parameters:
     locale: ru
 
 framework:
+    ide: "phpstorm://open?file=%%f&line=%%l"
     #esi:             ~
     translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
