--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,14 @@
         "doctrine/orm": "^2.5.11",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "friendsofsymfony/user-bundle": "~2.0",
+        "hwi/oauth-bundle": "^0.6.3",
         "mpdf/mpdf": "^7.1",
         "oneup/uploader-bundle": "^2.1",
+        "php-http/guzzle6-adapter": "~1.1.1",
+        "php-http/httplug-bundle": "~1.13",
         "sensio/framework-extra-bundle": "^5.2",
         "sonata-project/media-bundle": "^3.19",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "4.2.*",
         "symfony/debug": "4.2.*",
@@ -25,10 +29,7 @@
         "symfony/translation": "4.2.*",
         "symfony/var-dumper": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "4.2.*",
-        "hwi/oauth-bundle": "^0.6.3",
-        "php-http/guzzle6-adapter": "~1.1.1",
-        "php-http/httplug-bundle": "~1.13"
+        "symfony/yaml": "4.2.*"
     },
     "minimum-stability": "beta",
     "prefer-stable": true,
