--- a/config/routes/hwi_oauth_routing.yaml
+++ b/config/routes/hwi_oauth_routing.yaml
@@ -9,3 +9,13 @@ hwi_oauth_connect:
 #hwi_oauth_login:
 #    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
 #    prefix:   /login
+
+
+facebook_login:
+    path: /login/check-facebook
+
+vkontakte_login:
+    path: /login/check-vkontakte
+
+google_login:
+    path: /login/check-google
