--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "php-http/guzzle6-adapter": "~1.1.1",
         "php-http/httplug-bundle": "~1.13",
         "sensio/framework-extra-bundle": "^5.2",
+        "sonata-project/admin-bundle": "^3.48",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.9",
         "sonata-project/media-bundle": "^3.19",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/apache-pack": "^1.0",
