--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,9 @@
 parameters:
     locale: 'en'
 
+imports:
+    - { resource: admin.yaml }
+
 services:
     # default configuration for services in *this* file
     _defaults:
