--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/profiler-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.2.*",
