Новая роль ROLE_TRACKER

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -7,8 +7,9 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
 
     role_hierarchy:
+        ROLE_TRACKER:       ROLE_USER
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_TRACKER]
 
 
     providers:
