--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-bundle": "^1.6.10",
         "doctrine/doctrine-migrations-bundle": "v2.0.0-beta1",
         "doctrine/orm": "^2.5.11",
+        "friendsofsymfony/elastica-bundle": "^5.1",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "friendsofsymfony/user-bundle": "~2.0",
         "hwi/oauth-bundle": "^0.6.3",
