При модерации модели начисляется бонус автору. Оптимизация покупки, введение сервиса/менеджера для покупки и операций при модерации.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -74,6 +74,13 @@ services:
         # not required, will help in our example
         autowire: true
         public: true
+
+    wp.payment.manager:
+        class: App\Manager\PaymentManager
+        arguments: ['@doctrine.orm.entity_manager', '@mailer', '@templating', '@service_container']
+        # not required, will help in our example
+        autowire: true
+        public: true
         
         
     wp.menu:
