Единый индекс dev/prod для elastica

--- a/config/packages/dev/fos_elastica.yaml
+++ b/config/packages/dev/fos_elastica.yaml
@@ -4,7 +4,7 @@ fos_elastica:
         default: { host: '127.0.0.1', port: 9200 }
     indexes:
         app:
-            index_name: app_%kernel.environment%
+            index_name: app_prod
             types:
                 catalog:
                     persistence:
