--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "friendsofsymfony/user-bundle": "~2.0",
         "helios-ag/fm-elfinder-bundle": "^9.3",
         "hwi/oauth-bundle": "^0.6.3",
+        "knplabs/knp-paginator-bundle": "^4.1",
         "mpdf/mpdf": "^7.1",
         "oneup/uploader-bundle": "^2.1",
         "php-http/guzzle6-adapter": "~1.1.1",
