Замена select2 на selectize

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "jquery-form-styler": "^1.7.8",
         "jquery.ui.widget": "^1.10.3",
         "jqueryui": "^1.11.1",
-        "select2": "^4.0.6-rc.1",
+        "select2": "^4.0.13",
+        "selectize": "^0.12.6",
         "slick-carousel": "^1.6.0",
         "vue": "^2.5.18",
         "vue-loader": "^15.4.2",
